alterei o primeiro exercicio

--- a/exercicios/ex001/index.html
+++ b/exercicios/ex001/index.html
@@ -10,5 +10,6 @@
     <hr>        
     <h2>Olá novamente</h2>
     <p>Meu nome é Vitório e esse é meu primeiro exercicio, espero que dê tudo certo</p>
+    <h3>alterei aqui</h3>
 </body>
 </html>
