--- a/desafios/d003/index.html
+++ b/desafios/d003/index.html
@@ -14,8 +14,8 @@
         <p>A agricultura alimenta e inova, essencial para um futuro sustentável.</p>
     </header>
     <nav>
-        <a href="home.html">Home</a>
-        <a href="curiosidades.html">Curiosidades</a>
+        <a href="#">Home</a>
+        <a href="#">Curiosidades</a>
         <a href="#">Notícias</a>
         <a href="#">Fale comigo</a>
     </nav>
