--- a/exercicios/ex022/pag04.html
+++ b/exercicios/ex022/pag04.html
@@ -7,13 +7,33 @@
     <style>
         body{
             height: 97vh;
+            background-color: black;
             background-image: url('img/wallpaper003.jpg');
             background-position: right top;
+            background-repeat: no-repeat; /*não duplicar imagem*/
+            background-size: cover; /* ajustar imagem*/
+            background-attachment: fixed; /* mover apenas o main*/
+            /*short - background
+            color > image > position > repeat > [size] > attachment
+            */
         }
+        main{
+            background-color: white;
+            color: black;
+            width: 400px;
+            padding: 10px;
+            margin: auto;
+            text-align: justify;
+        }
+
 
     </style>
 </head>
 <body>
+    <main>
+        <h1>texto</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque doloremque quisquam, ab sint necessitatibus dolorem ipsa hic laboriosam nostrum dolorum, quasi, ullam harum consequatur dolore ipsum laudantium assumenda alias ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod cupiditate eligendi quisquam in, deleniti, sint neque facere dolorum fugit omnis dicta recusandae voluptatem quibusdam provident vel iste molestiae totam nam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste at ducimus fuga assumenda, maiores nisi quas ad corporis incidunt voluptas ullam perspiciatis doloribus laudantium, dolorem esse labore tempore neque voluptatem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui illo voluptate dolorem itaque nisi sint debitis. Culpa, officia, reiciendis quas totam aliquam id consectetur quia suscipit quam, accusamus quae recusandae? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad saepe necessitatibus dolor natus tenetur, assumenda provident possimus. Accusamus, non esse vitae voluptatum repellat cumque ab temporibus nesciunt asperiores pariatur fugiat!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque doloremque quisquam, ab sint necessitatibus dolorem ipsa hic laboriosam nostrum dolorum, quasi, ullam harum consequatur dolore ipsum laudantium assumenda alias ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod cupiditate eligendi quisquam in, deleniti, sint neque facere dolorum fugit omnis dicta recusandae voluptatem quibusdam provident vel iste molestiae totam nam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste at ducimus fuga assumenda, maiores nisi quas ad corporis incidunt voluptas ullam perspiciatis doloribus laudantium, dolorem esse labore tempore neque voluptatem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui illo voluptate dolorem itaque nisi sint debitis. Culpa, officia, reiciendis quas totam aliquam id consectetur quia suscipit quam, accusamus quae recusandae? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad saepe necessitatibus dolor natus tenetur, assumenda provident possimus. Accusamus, non esse vitae voluptatum repellat cumque ab temporibus nesciunt asperiores pariatur fugiat!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque doloremque quisquam, ab sint necessitatibus dolorem ipsa hic laboriosam nostrum dolorum, quasi, ullam harum consequatur dolore ipsum laudantium assumenda alias ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod cupiditate eligendi quisquam in, deleniti, sint neque facere dolorum fugit omnis dicta recusandae voluptatem quibusdam provident vel iste molestiae totam nam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste at ducimus fuga assumenda, maiores nisi quas ad corporis incidunt voluptas ullam perspiciatis doloribus laudantium, dolorem esse labore tempore neque voluptatem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui illo voluptate dolorem itaque nisi sint debitis. Culpa, officia, reiciendis quas totam aliquam id consectetur quia suscipit quam, accusamus quae recusandae? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad saepe necessitatibus dolor natus tenetur, assumenda provident possimus. Accusamus, non esse vitae voluptatum repellat cumque ab temporibus nesciunt asperiores pariatur fugiat!</p>
+    </main>
 
     
 </body>
