--- a/desafios/d04/index.html
+++ b/desafios/d04/index.html
@@ -16,6 +16,7 @@
     </nav>
     <main>
         <h2>Violão</h2>
+        <article class="img" id="img1"></article>
         <h3>Como Funciona</h3>
             <p>O violão é um instrumento de cordas que produz som através da vibração das cordas, que é amplificada pela caixa de ressonância do instrumento. O músico dedilha ou palheta as cordas, que vibram e geram som. A afinação padrão das seis cordas é E, A, D, G, B, E, da mais grave para a mais aguda.</p>
         <h3>Onde Surgiu</h3>
