--- a/desafios/d04/index.html
+++ b/desafios/d04/index.html
@@ -63,7 +63,7 @@
                 <p>A bateria foi desenvolvida para permitir que um único músico pudesse tocar múltiplos instrumentos de percussão simultaneamente, atendendo à demanda por um som mais completo e ritmicamente diversificado em bandas de jazz e, posteriormente, em bandas de rock e outros estilos.</p>
         </article>
     </main>
-    <footer>Site criado por Vitório Honorato</footer>
+    <footer>Site criado por <a href="https://www.instagram.com/vitorio_pereira_/ ">Vitório Honorato</a></footer>
     
 </body>
 </html>
