--- a/exercicios/ex025/formulario02.html
+++ b/exercicios/ex025/formulario02.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-        <form action="cadastro.php">
+        <form action="cadastro.php" method="post"> <!--NÃO ESQUESER O METHOD="POST"-->
             <p>
                 <label for="iestado">Estado: </label>
                 <select name="Estado" id="iestado">
