--- a/exercicios/ex025/formulario03.html
+++ b/exercicios/ex025/formulario03.html
@@ -7,23 +7,41 @@
 </head>
 <body>
     <h1>Vou testar mais formulario usando JavaScript</h1>
-    <form action="cadastro.php">
+    <form action="cadastro.php" method="post" autocomplete="on">
         <p>
             <label for="inumero1">Número 1:</label>
-            <input type="number" name="numero1" id="inumero1" min="0" max="10" required
+            <input type="number" name="numero1" id="inumero1" min="0" max="10" step="0.1" required
             oninput="isoma.innerHTML = Number(inumero1.value) + Number(inumero2.value)">
         </p>
         <p>
             <label for="inumero2">Número 2:</label>
-            <input type="number" name="numero2" id="inumero2" min="0" max="10" required
+            <input type="number" name="numero2" id="inumero2" min="0" max="10" step="0.1" required
             oninput="isoma.innerHTML = Number(inumero1.value) + Number(inumero2.value)">
         </p>
         <p>
             <label for="isoma">Soma:</label>
             <output name="soma" id="isoma">0</output>
         </p>
+
+        <p> <!--AINDA ESTÁ ERRADO-->
+            <label for="imedia">Média:</label>
+            <output name="media" id="imedia">0</output>
+        </p>
         <input type="submit" value="Enviar">
         <input type="reset" value="Limpar">
+
+    </form>
+
+    <form action="cadastro.php">
+        <h1>Exemplos de formulários</h1>
+        <p><label for="inumero">Número: </label>
+            <input type="range" name="numero" id="inumero" min="0" max="10" value="0"
+            oninput="inumeracao.innerHTML = Number(inumero.value)">
+            <output id="inumeracao">0</output>
+        </p>
+
+
+
 
     </form>
 
